fix spacing

--- a/microservices/client/src/containers/auth/Login/index.module.scss
+++ b/microservices/client/src/containers/auth/Login/index.module.scss
@@ -6,5 +6,10 @@
 @media (max-width: 1240px) {
     .flex_wrapper {
         flex-direction: column;
+        max-width: fit-content;
+        flex-shrink: 0;
+        a {
+            max-width: fit-content;
+        }
     }
 }
