--- a/microservices/client/src/containers/auth/index.module.scss
+++ b/microservices/client/src/containers/auth/index.module.scss
@@ -1,7 +1,7 @@
 .auth_page_paddings{
     padding: 2em;
     padding-left: 5em;
-    padding-right: 6em;
+    padding-right: 2em;
 }
 
 .left_auth_formatting_register {
